# predvidanje_potrosnje

./: .dockerignore  .flake8  .gitignore  DOCUMENTATION.md  Dockerfile  Makefile  README.md  SOURCES.md  app.py  app_enhanced.py  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements.txt  run-dev.bat  run-prod.bat  task.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  docker-publish.yml  quality-gates.yml
data/: full_dataset.csv  historical_consumption.csv  preparation_metadata.json  sample_descriptions.json  sample_growing_consumption.csv  sample_industrial_consumption.csv  sample_retail_consumption.csv  sample_seasonal_consumption.csv  sample_volatile_consumption.csv  test_set.csv  train_set.csv
notebooks/: 01_EDA.ipynb  02_Preparation.ipynb  03_Modeling.ipynb  04_Documentation.ipynb
notebooks/.ipynb_checkpoints/: 01_EDA-checkpoint.ipynb  02_Preparation-checkpoint.ipynb
src/: model.py
tests/: test_integration.py  test_model.py
